👌 IMPROVE: Refactor Sql Server and email properties

--- a/src/main/resources/global-config.yaml
+++ b/src/main/resources/global-config.yaml
@@ -37,14 +37,14 @@ email:
   host: 'outlook.office365.com'
   port: '587'
   user: 'myUser'
-  pass: 'myPass'
+  password: 'myPass'
 
 # SQL Server
 mssql:
   host: 'myHost'
   user: 'myUser'
-  pass: 'myPAss'
-  name: 'master'
+  password: 'myPAss'
+  database: 'master'
 
 # Service messages
 messages:
