--- a/src/main/resources/global-config.yaml
+++ b/src/main/resources/global-config.yaml
@@ -8,6 +8,7 @@ jks:
 
 # Listening port of the serivce
 httpprotocol: "HTTPS"
+httpsprotocol: "HTTPS"
 http:
   port: "8081"
 https:
@@ -49,7 +50,8 @@ mssql:
 
 # Service messages
 messages:
-  backend-error: "There was a problem while trying to access the backend repository"
+
+  # API
   apikit-400: "Bad request"
   apikit-404: "Resource not found"
   apikit-405: "Method not allowed"
@@ -62,3 +64,11 @@ messages:
   record-create-success: "The record was created successfully"
   record-create-error: "There was a problem while creating the record"
   record-exists: "The record already exists"
+
+  # Batch processing
+  batch-stillrunning: "The batch process is still running"
+  batch-success: "The records were created or updated successfully"
+  batch-error: "There was a problem while proccessing the batch"
+
+  # General
+  backend-error: "There was a problem while trying to access the backend repository"
